# twotrees-sk1-display

./: LICENSE  README.md  display_uart_raw_protocol.md
esp32-tft/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
esp32-tft/main/display/: display_events.h  display_protocol.c  display_protocol.h  display_uart.c  display_uart.h
esp32-tft/main/klipper/: moonraker_client.c  moonraker_client.h  moonraker_websocket.c  moonraker_websocket.h
esp32-tft/main/system/: app_state.c  app_state.h  app_watchdog.c  app_watchdog.h  files_cache.c  files_cache.h  thumbnail_cache.c  thumbnail_cache.h  wifi_manager.c  wifi_manager.h
esp32-tft/main/thumbnails/: thumbnail_worker.c  thumbnail_worker.h
esp32-tft/main/ui/: ui_controller.c  ui_controller.h  ui_pages_files.c  ui_pages_files.h  ui_pages_home.c  ui_pages_home.h  ui_pages_print.c  ui_pages_print.h  ui_state.c  ui_state.h
vaptechclient/: Cargo.toml  readme.md
vaptechclient/config/: config.example.toml
vaptechclient/fixtures/moonraker/: printing_update.json
vaptechclient/fixtures/thumbnails/: orca_thumbnail.gcode
vaptechclient/packaging/: README.md  build-release.sh  config.printer.toml  deploy.sh  vaptechclient.service
vaptechclient/src/: config.rs  lib.rs  main.rs  runtime.rs
vaptechclient/src/app/: event.rs  mod.rs  runner.rs  state.rs
vaptechclient/src/hmi/: command.rs  event.rs  frame.rs  mock_transport.rs  mod.rs  parser.rs  serial_service.rs  serial_transport.rs  transport.rs
vaptechclient/src/moonraker/: client.rs  event.rs  (+2 more)
vaptechclient/tests/: integration_print_pipeline.rs
(+46 files in other folders)
